Make lots of progress

--- a/index.html
+++ b/index.html
@@ -18,13 +18,134 @@
                 <li><a href="">Proyectos</a></li>
                 <li><a href="">Redes Sociales</a></li>
                 <li><a href="">Eventos</a></li>
+                <li><a href="">Sobre mi</a></li>
+                <li><a href="./subscription.html">Suscripción</a></li>
                 <li><a href="">Agradecimientos</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <h1>Gabriel Erazo</h1>
+        <h1>
+            <img src="./imgs/icons8-3d-printer-64.png" alt="3d printed pyramid icon">
+            Gabriel Erazo
+            <img src="./imgs/icons8-3d-printer-64.png" alt="3d printed pyramid icon">
+        </h1>
+
+        <section class="search">
+            <h2 class="search__title">¿Qué quieres saber de mi?</h2>
+            <input
+                class="search__input"
+                type="text"
+                placeholder="Buscar..."
+                name="search"
+                id="search"
+            >
+        </section>
+
+        <section class="carousel">
+            <div class="carousel__container">
+                <article class="carousel-item">
+                    <img class="carousel-item__img" src="https://images.unsplash.com/photo-1693520999631-6ac145c1dd15?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2748&q=80" alt="">
+                    <div class="carousel-item__details">
+                        <div>
+                            <img src="./imgs/icons8-coffee-cup-64.png" alt="Coffee Cup">
+                            <img src="./imgs/icons8-research-64.png" alt="Research">
+                        </div>
+                        <h3 class="carousel-item__details--title">Título del artículo</h3>
+                        <h4 class="carousel-item__details--subtitle">Subtítulo del artículo</h4>
+                    </div>
+                </article>
+                <article class="carousel-item">
+                    <img class="carousel-item__img" src="https://images.unsplash.com/photo-1693520999631-6ac145c1dd15?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2748&q=80" alt="">
+                    <div class="carousel-item__details">
+                        <div>
+                            <img src="./imgs/icons8-coffee-cup-64.png" alt="Coffee Cup">
+                            <img src="./imgs/icons8-research-64.png" alt="Research">
+                        </div>
+                        <h3 class="carousel-item__details--title">Título del artículo</h3>
+                        <h4 class="carousel-item__details--subtitle">Subtítulo del artículo</h4>
+                    </div>
+                </article>
+                <article class="carousel-item">
+                    <img class="carousel-item__img" src="https://images.unsplash.com/photo-1693520999631-6ac145c1dd15?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2748&q=80" alt="">
+                    <div class="carousel-item__details">
+                        <div>
+                            <img src="./imgs/icons8-coffee-cup-64.png" alt="Coffee Cup">
+                            <img src="./imgs/icons8-research-64.png" alt="Research">
+                        </div>
+                        <h3 class="carousel-item__details--title">Título del artículo</h3>
+                        <h4 class="carousel-item__details--subtitle">Subtítulo del artículo</h4>
+                    </div>
+                </article>
+                <article class="carousel-item">
+                    <img class="carousel-item__img" src="https://images.unsplash.com/photo-1693520999631-6ac145c1dd15?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2748&q=80" alt="">
+                    <div class="carousel-item__details">
+                        <div>
+                            <img src="./imgs/icons8-coffee-cup-64.png" alt="Coffee Cup">
+                            <img src="./imgs/icons8-research-64.png" alt="Research">
+                        </div>
+                        <h3 class="carousel-item__details--title">Título del artículo</h3>
+                        <h4 class="carousel-item__details--subtitle">Subtítulo del artículo</h4>
+                    </div>
+                </article>
+                <article class="carousel-item">
+                    <img class="carousel-item__img" src="https://images.unsplash.com/photo-1693520999631-6ac145c1dd15?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2748&q=80" alt="">
+                    <div class="carousel-item__details">
+                        <div>
+                            <img src="./imgs/icons8-coffee-cup-64.png" alt="Coffee Cup">
+                            <img src="./imgs/icons8-research-64.png" alt="Research">
+                        </div>
+                        <h3 class="carousel-item__details--title">Título del artículo</h3>
+                        <h4 class="carousel-item__details--subtitle">Subtítulo del artículo</h4>
+                    </div>
+                </article>
+                <article class="carousel-item">
+                    <img class="carousel-item__img" src="https://images.unsplash.com/photo-1693520999631-6ac145c1dd15?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2748&q=80" alt="">
+                    <div class="carousel-item__details">
+                        <div>
+                            <img src="./imgs/icons8-coffee-cup-64.png" alt="Coffee Cup">
+                            <img src="./imgs/icons8-research-64.png" alt="Research">
+                        </div>
+                        <h3 class="carousel-item__details--title">Título del artículo</h3>
+                        <h4 class="carousel-item__details--subtitle">Subtítulo del artículo</h4>
+                    </div>
+                </article>
+                <article class="carousel-item">
+                    <img class="carousel-item__img" src="https://images.unsplash.com/photo-1693520999631-6ac145c1dd15?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2748&q=80" alt="">
+                    <div class="carousel-item__details">
+                        <div>
+                            <img src="./imgs/icons8-coffee-cup-64.png" alt="Coffee Cup">
+                            <img src="./imgs/icons8-research-64.png" alt="Research">
+                        </div>
+                        <h3 class="carousel-item__details--title">Título del artículo</h3>
+                        <h4 class="carousel-item__details--subtitle">Subtítulo del artículo</h4>
+                    </div>
+                </article>
+                <article class="carousel-item">
+                    <img class="carousel-item__img" src="https://images.unsplash.com/photo-1693520999631-6ac145c1dd15?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2748&q=80" alt="">
+                    <div class="carousel-item__details">
+                        <div>
+                            <img src="./imgs/icons8-coffee-cup-64.png" alt="Coffee Cup">
+                            <img src="./imgs/icons8-research-64.png" alt="Research">
+                        </div>
+                        <h3 class="carousel-item__details--title">Título del artículo</h3>
+                        <h4 class="carousel-item__details--subtitle">Subtítulo del artículo</h4>
+                    </div>
+                </article>
+                <article class="carousel-item">
+                    <img class="carousel-item__img" src="https://images.unsplash.com/photo-1693520999631-6ac145c1dd15?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2748&q=80" alt="">
+                    <div class="carousel-item__details">
+                        <div>
+                            <img src="./imgs/icons8-coffee-cup-64.png" alt="Coffee Cup">
+                            <img src="./imgs/icons8-research-64.png" alt="Research">
+                        </div>
+                        <h3 class="carousel-item__details--title">Título del artículo</h3>
+                        <h4 class="carousel-item__details--subtitle">Subtítulo del artículo</h4>
+                    </div>
+                </article>
+            </div>
+        </section>
     </main>
 
     <footer class="full-width">
@@ -33,3 +154,29 @@
     </footer>
 </body>
 </html>
+<!-- Valores:
+- Calidad en las cosas que hago
+- Experimentar
+- Eticamente correcto
+- Ayudar a la humanidad
+- Uso de las cosas cómo deberían ser (por ejemplo mecanografiar, tener teclados con teclas rectas, cosas ergonomicas, etc.)
+- Relentlessness - ganas inagotables de no rendirse y avanzar
+- Unión de cosas
+- Nunca parar de aprender
+- Filantropo
+- No quedarce quieto
+- consistente
+
+Poner mi e-mail en la descripción de mis redes
+
+¿Por qué?
+- Para obtener trabajo
+- Para aumentar mi red social
+
+¿Misión en la vida?
+- Ayudar a la humanidad
+- Ser transcendental
+- Hacer que la vida de las personas sea más fácil
+- Lograr que las cosas se usen correctamente
+- Unificar las cosas
+ -->
